--- a/test.html
+++ b/test.html
@@ -31,7 +31,11 @@
   <title>make 8-bit art!</title>
   <link rel="stylesheet" href="build/make8bitart.css" />
   <style>
-
+#antsCanvas {
+  position: absolute;
+  border: 2px solid black;
+  pointer-events: none;
+}
   </style>
   <link rel="icon" href="assets/favicon.png" />
 </head>
