add box for selecting

--- a/test.html
+++ b/test.html
@@ -35,6 +35,8 @@
   #dragSelectBox {
     position: absolute;
     border: 1px solid red;
+    margin-top: -1px;
+    margin-left: -1px;
   }
   </style>
 </head>
