--- a/test.html
+++ b/test.html
@@ -32,11 +32,24 @@
   <link rel="stylesheet" href="build/make8bitart.min.css" />
   <link rel="icon" href="assets/favicon.png" />
   <style>
+  @-webkit-keyframes animatedBackground {
+    from { background-position: 0 0; }
+    to { background-position: -8px 0; }
+  }
+
   #dragSelectBox {
     position: absolute;
-    border: 1px solid red;
+    overflow: hidden;
     margin-top: -1px;
     margin-left: -1px;
+  }
+
+  #dragSelectBox div {
+    background: url(https://s3.amazonaws.com/f.cl.ly/items/3q3O2Q3Q0A1G1M1T0y0P/ants.gif);
+    width: 100%;
+    height: 100%;
+    padding: 1px;
+    -webkit-animation: animatedBackground 1s linear infinite;
   }
   </style>
 </head>
