distinguish between move & copy

--- a/test.html
+++ b/test.html
@@ -159,7 +159,8 @@
       </div>
       
       <p>
-        <input type="submit" id="select" title="select" value="select"/>
+        <input type="submit" id="move" class="selectButton" title="move" value="move"/>
+        <input type="submit" id="copy" class="selectButton" title="copy" value="copy"/>
         <input type="submit" id="undo" title="ctrl+z" value="undo" disabled="disabled" />
         <input type="submit" id="redo" title="ctrl+y" value="redo" disabled="disabled" />
       </p>
