--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
       </div>
       
       <p>
+        <input type="submit" id="move" class="selectButton" title="move" value="move"/>
+        <input type="submit" id="copy" class="selectButton" title="copy" value="copy"/>
+      </p>
+      <p>
         <input type="submit" id="undo" title="ctrl+z" value="undo" disabled="disabled" />
         <input type="submit" id="redo" title="ctrl+y" value="redo" disabled="disabled" />
       </p>
